chore: add partition to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,7 @@ tags
 .history
 .ionide
 
+# Extras for this project
+partition
+
 # End of https://www.toptal.com/developers/gitignore/api/c,visualstudiocode,cmake,macos,vim,emacs,linux
