--- a/.gitignore
+++ b/.gitignore
@@ -223,4 +223,7 @@ settings.json
 # Output files
 out
 
+# Results
+results
+
 # End of https://www.toptal.com/developers/gitignore/api/c,visualstudiocode,cmake,macos,vim,emacs,linux
