--- a/02_db_oltp_vs_olap/requirements.txt
+++ b/02_db_oltp_vs_olap/requirements.txt
@@ -1,5 +1,6 @@
 contourpy==1.3.1
 cycler==0.12.1
+duckdb==1.2.2
 fonttools==4.56.0
 kiwisolver==1.4.8
 matplotlib==3.10.1
@@ -9,3 +10,4 @@ pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 six==1.17.0
+tabulate==0.9.0
