Remove large CSV files from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,4 @@ results
 *.db
 
 # End of https://www.toptal.com/developers/gitignore/api/c,visualstudiocode,cmake,macos,vim,emacs,linux02_db_oltp_vs_olap/sql_benchmarks/data/*.csv
+02_db_oltp_vs_olap/sql_benchmarks/tpch/data/*.csv
