--- a/.gitignore
+++ b/.gitignore
@@ -231,3 +231,4 @@ results
 
 # End of https://www.toptal.com/developers/gitignore/api/c,visualstudiocode,cmake,macos,vim,emacs,linux02_db_oltp_vs_olap/sql_benchmarks/data/*.csv
 02_db_oltp_vs_olap/sql_benchmarks/tpch/data/*.csv
+02_db_oltp_vs_olap/sql_benchmarks/data*.csv
